--- a/hoja.html
+++ b/hoja.html
@@ -5,14 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Hoja de vida</title>
-    <link rel="stylesheet" href="hoja.css" />
+    <link rel="stylesheet" href="css/hoja.css" />
   </head>
   <body>
     <script src="https://kit.fontawesome.com/b99e675b6e.js"></script>
     <div class="resume">
       <div class="resume_left">
         <div class="resume_profile">
-          <img src="foto.jpeg" alt="profile_pic" />
+          <img src="imagenes/foto2.jpeg" alt="profile_pic" />
         </div>
         <div class="resume_content">
           <div class="resume_item resume_info">
